--- a/my-portfolio/src/index.css
+++ b/my-portfolio/src/index.css
@@ -61,15 +61,23 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
+  display: block;
   min-width: 320px;
   min-height: 100vh;
+  padding-top: 4rem;
+}
+
+main {
+  width: 100%;
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 1rem;
 }
 
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+  margin-top: 1rem;
 }
 
 button {
